2002-07-06  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/module_interface.c (FlushMessageQueue):
	(PositiveWrite):
	(get_pipe_name):
	tried to fix module communication deadlock w/ sync mask and a full write
	pipe

	* libs/Strings.c:
	re-indented file

	* libs/defaults.h:
2002-07-06  olicha  <olivier.chapuis@free.fr>

	* libs/Flocale.c (FlocaleGetFontSet):
	Removed some unwanted code

2002-07-06  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/events.c (HandleLeaveNotify):
	(HandleEnterNotify):
	reduced the number of MX_LEAVE/ENTER_WINDOW messages

	* fvwm/events.c (CMD_XSync):
	very experimental patch to cycle through subwindows accepting keyboard
	input; call Xsync command repeatedly to test; crashes fvwm if more than
	1000 subwindows are used;

	* fvwm/focus.c (CMD_WarpToWindow):
	fixed a bug in warpttowindow command with subwindows of unmanaged
	windows

2002-07-05  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/events.c (HandlePropertyNotify):
	* fvwm/events.h:
	handle changes in the size_inc and base_size hints during opaque
	resizing.

	* fvwm/events.c (HandleButtonPress):
	ClickToFocus + ClickToFocusPassesClickOff now blocks event handling
	until the button is released again; this restores the old behaviour
	from 2.3.23 and before with click+drag and rxvt/aterm

2002-06-30  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/update.c (apply_window_updates):
	fixed applying neverfocus to currently focused window; decorations
	partially drawn hilighted

2002-07-05  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/menucmd.c (menu_func):
	another module/menu/context window fix
	do not use global Fw anymore

2002-07-05  olicha  <olivier.chapuis@free.fr>

	* libs/Flocale.c (FlocaleStringToString2b):
	Fixed crash with big5-0 FontStruct

2002-07-04  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/menucmd.c (menu_func):
	fixed context window of menus invoked by a module
	(menu_func):
	fixed context menus on windows

	* libs/vpacket.h (ConfigWinPacket):