@@ -1,5 +1,8 @@
 2002-07-06  Dominik Vogt  <dominik.vogt@gmx.de>
 
+	* fvwm/add_window.c (AddWindow):
+	workaround for buggy TK menu positioning
+
 	* fvwm/module_interface.c (FlushMessageQueue):
 	(PositiveWrite):
 	(get_pipe_name):
